--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -236,7 +236,7 @@
 			</div>
 			<div class="credit">
 				<div class="me">
-					Made by <span>Parshuram Nikam</span> - <a href="https://github.com/ParshuramNikam/Shortner"
+					Made by <span>Deep Lahane</span> - <a href="https://github.com/deeplahane/Shortner"
 						style="text-decoration: underline;">Github Code</a>
 				</div>
 				<div class="imageIcons">
